# atspi-rs

./: Cargo.toml  Gir.toml  README.md  vendor.md
examples/: event_test.rs  keystroke_test.rs  list-applications.rs  print_active_window_hierarchy.rs
gir-files/: Atspi-2.0.gir  Atspi-2.0.gir.patch
src/: accessible.rs  desktop.rs  events.rs  functions.rs  init.rs  lib.rs  text.rs
src/auto/: accessible.rs  action.rs  alias.rs  application.rs  collection.rs  component.rs  constants.rs  device_event.rs  device_listener.rs  document.rs  editable_text.rs  enums.rs  event.rs  event_listener.rs  event_listener_mode.rs  flags.rs  functions.rs  hyperlink.rs  hypertext.rs  image.rs  key_definition.rs  match_rule.rs  mod.rs  object.rs  point.rs  range.rs  rect.rs  relation.rs  selection.rs  state_set.rs  table.rs  table_cell.rs  text.rs  text_range.rs  value.rs  versions.txt
sys/: Cargo.toml  Gir.toml  build.rs  lib.rs.patch
sys/src/: lib.rs
sys/tests/: abi.rs  constant.c  layout.c  manual.h
