[package]
name = "atspi"
version = "0.1.0"
description = "High-level bindings to the Assistive Technology Service Provider Interface library (libatspi)."
authors = ["mcb2003 <mikeybuchan@hotmail.co.uk>"]
license = "lgpl-2.1-or-later"
edition = "2018"

[features]
v2_9_90 = ["ffi/v2_9_90"]
v2_10 = ["ffi/v2_10"]
v2_34 = ["ffi/v2_34"]
dox = ["ffi/dox"]

[dependencies]
bitflags = "1.2.1"
ffi = { package = "atspi-sys", path = "sys" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
libc = "0.2.91"
once_cell = "1.7.2"
thiserror = "1.0.24"
